--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ querystring-parser = "^1.2.4"
 pandas = "^2.0.2"
 sqlalchemy = "1.4.46"
 alembic = "^1.11.1"
-mlflow-skinny = "1.29.0"
+mlflow = "^2.4.0"
 
 
 [build-system]
