--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,9 @@ python = "^3.9"
 flask = "^2.3.2"
 gunicorn = "^20.1.0"
 querystring-parser = "^1.2.4"
-pandas = "^2.0.2"
 sqlalchemy = "1.4.46"
 alembic = "^1.11.1"
-mlflow = "^2.4.0"
+mlflow = "1.29.0"
 
 
 [build-system]
